# chess

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  chessengine.gitlab-ci.yml
src/: chessboard.cc  chessboard.hh  fen-object.hh  fen-rank.hh  listener-manager.hh  main.cc  move.cc  move.hh  move.hxx  option-parser.cc  option-parser.hh  perft-object.hh  perft-parser.cc  piece-type.hh  position.hh  position.hxx  rule.cc  rule.hh
src/chess_engine/ai/: ai-launcher.cc  ai-mini.cc  ai-mini.hh  evaluation.cc  evaluation.hh  parallel-for.hh  tensor.hh  uci.cc  uci.hh
src/chess_engine/board/: board.cc  board.hh  chessboard.cc  chessboard.hh  defs.hh  magic-bitboard.hh  move-generation.cc  move-generation.hh  move-initialization.cc  move-initialization.hh  move.hh  move.hxx  piece-type.hh  position.hh  position.hxx  rule.cc  rule.hh
src/chess_engine/board/entity/: move.hh  move.hxx  piece-type.hh  position.hh  position.hxx
src/listener/: alan-listener.hh  listener-manager.cc  listener-manager.hh  listener.hh
src/parsing/option_parser/: option-parser.cc  option-parser.hh  pertf-handling.hh
src/parsing/perft_parser/: fen-object.hh  fen-rank.hh  perft-object.hh  perft-parser.cc  perft-parser.hh
src/parsing/pgn_parser/: ebnf-parser.hh  pgn-move.cc  pgn-move.hh  pgn-parser.cc
src/utils/: bits-utils.hh
tests/: eval-evaluation.py  fen_eval.py  perft-testsuite.py  pgn-testsuite.py
tests/eval-perft/: Alburt_1.perft  Alburt_2.perft  Alburt_3.perft  Alburt_4.perft  Alburt_5.perft  Alburt_6.perft  Alburt_7.perft  Blackburne_1.perft  Blackburne_2.perft  Blackburne_3.perft  Blackburne_4.perft  Blackburne_5.perft  DeLaBourdonnais_1.perft  DeLaBourdonnais_2.perft  DeLaBourdonnais_3.perft  DeLaBourdonnais_4.perft  DeLaBourdonnais_5.perft  Kasparov_1.perft  Kasparov_2.perft  Kasparov_3.perft  Kasparov_4.perft  Kasparov_5.perft  Kasparov_6.perft  Kasparov_7.perft  Lputian_1.perft  Lputian_2.perft  Lputian_3.perft  Lputian_4.perft  Lputian_5.perft  Tal_1.perft  Tal_2.perft  Tal_3.perft  Tal_4.perft  Tal_5.perft  VachierLagrave_1.perft  VachierLagrave_2.perft  VachierLagrave_3.perft  black_open_file.perft  black_pawn_field.perft  given_castling_base_depth.perft  (+9 more)
tests/fen/: black_open_file.fen  black_pawn_field.fen
tests/pgn/: split-pgn.py
tests/unit_tests/: ai_search2_test.cc  ai_search3_test.cc  ai_search_test.cc  board_test.cc  check_test.cc  chessboard.cc  chessboard_test.cc  evaluate_test.cc  example2_test.cc  fenobject_test.cc  fenrank_test.cc  game_test.cc  move_generation_test.cc  perft_parser_test.cc  possible_move_test.cc  rule_test.cc  uci_communication_test.cc
